# 52-weeks-of-projects-2024

./: .gitignore
01-simple-p2p-blockchain/: .gitignore  README.md  block.go  chain.go  go.mod  go.sum  main.go  p2p.go
02-biz-cards-to-csv/: README.md  pyproject.toml
02-langchain-fastapi-vacation-recommender/: README.md  pyproject.toml  requirements.txt
02-langchain-fastapi-vacation-recommender/vacatify/: main.py  schemas.py
02-langchain-fastapi-vacation-recommender/vacatify/chains/: vacation.py
02-langchain-fastapi-vacation-recommender/vacatify/routes/: vacation.py
03-chat-ssh-server-golang/: .gitignore  README.md  go.mod  go.sum  main.go
03-chat-ssh-server-golang/rooms/: room.go
04-influx-db-fastapi/: .gitignore  .tool-versions  README.md  docker-compose.yml  pyproject.toml  requirements.txt
04-influx-db-fastapi/influxapi/: config.py  main.py  schemas.py
04-influx-db-fastapi/influxapi/client/: influx.py
04-influx-db-fastapi/influxapi/routes/: chart.py  read.py  write.py
05-building-immutable-infrastructure/: .gitignore  .tool-versions  README.md
05-building-immutable-infrastructure/ansible/: main.yml
06-sorting-algs-in-golang/: README.md  bubble_sort.go  bubble_sort_test.go  go.mod  heap_sort.go  heap_sort_test.go  insertion_sort.go  insertion_sort_test.go  quick_sort.go  quick_sort_test.go
07-golang-gin-langchain/: README.md  go.mod  go.sum  main.go
07-golang-gin-langchain/chains/: structs.go  (+1 more)
08-kubernetes-controllers/: README.md
09-admission-controllers-kubernetes/: .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go
(+56 files in other folders)
